tests/chapter_11/invalid_parse/var_name_long.c
int main(void) {
    /* Because LONG64 is a keyword, you can't use it as a variable name */
    int LONG64 = 5;
    return LONG64;
}